--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Colin Ashburn",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cashburn/nancy-ashburn.git"
+  },
   "dependencies": {
     "bootstrap": "4.1.1",
     "devicons": "^1.8.0",
